# senticast-copilot

./: .gitignore  README.md  app.py  config.yaml  data.md  pyproject.toml  requirements.txt
src/: evaluate.py  train.py  visualize.py
src/data/: dataset.py  generate_sample.py  preprocessing.py
src/data/dataset/: dataset.md  news-summary-copper.csv  news-summary-gold.csv  news-summary-silver.csv  trading-data-copper.csv  trading-data-gold.csv  trading-data-silver.csv
src/models/: diffusion.py  glaff.py  moe.py  news_encoder.py  senticast.py
src/utils/: metrics.py
